fix default values

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 			// You don't need to set display_name nor uri, they can be set via HTTP form in
 			// the Login section of the web
 			//
-			window.SETTINGS =
-			 {
+			//window.SETTINGS =
+			// {
 			// 	display_name        : null,
-			 	uri                 : 'sip:5300@voip.freepbx.ml',
-			 	password            : '54123Ab',
-				socket              :
-				{
-			 		uri           : 'wss://voip.freepbx.ml:8089/ws',
-			 		via_transport : 'WSS',
-			 	},
-			 	registrar_server    : voip.freepbx.ml,
+			// 	uri                 : 'sip:5300@voip.freepbx.ml',
+			// 	password            : '54123Ab',
+			//	socket              :
+			//	{
+			// 		uri           : 'wss://voip.freepbx.ml:8089/ws',
+			// 		via_transport : 'WSS',
+			// 	},
+			// 	registrar_server    : voip.freepbx.ml,
 			// 	contact_uri         : null,
 			// 	authorization_user  : null,
 			// 	instance_id         : null,
@@ -56,7 +56,7 @@
 			// 		AppID     : null,
 			// 		AppSecret : null
 			// 	}
-			 };
+			// };
 		</script>
 
 		<script src='tryit-jssip.js'></script>
